--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,12 @@ img {
     color: var(--color-brand);
 }
 
+.card-custom-image img {
+  width: 100%;
+  height: 250px; /* Adjust height to your desired size */
+  object-fit: cover; /* Ensures image is cropped to fit without stretching */
+}
+
 @media (min-width: 992px) {
     .navbar {
         min-height: 100vh;
